--- a/CMEsteban/Page/css/cme.css
+++ b/CMEsteban/Page/css/cme.css
@@ -9,6 +9,11 @@ html * {
     padding-top: 50px;
     padding-bottom: 50px;
 }
+
+#main {
+    padding-bottom: 80px;
+}
+
 .depage-form {
     max-width: 100% !important;
 }
